实现预约书功能

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
     {% if books %}
     <ul>
     {%  for book in books%}
-        {% if book.state == 0  %}
+        {% if book.state == 1  %}
             <li>书名：{{  book.bookName }}</li>
             <li>id: {{ book.id }}</li>
             <li>现在可以外借，请携带学生证到电院群楼3-102借阅此书</li>
@@ -47,6 +47,7 @@
             <li>id: {{ borrow.currentBook.id }} </li>
             <li>借书日期: {{ borrow.borrowDate|date:"Y-m-d" }}</li>
             <li>此书已被借，到期时间为: {{ borrow.shouldBackDate|date:"Y-m-d" }}</li>
+            <li><a href="order/{{ borrow.currentBook.id}}">预约此书</a></li>
         <hr/>
     {%  endfor %}
     {% endif %}
