--- a/templates/detail.html
+++ b/templates/detail.html
@@ -36,7 +36,7 @@
     {% if orderbooks %}
     <ul>
    {%  for order in orderbooks%}
-            <li>书名：{{  order.book.bookName }}</li>
+            <li>书名：{{  order.book.doubanxinxi.bookName }}</li>
             <li>id: {{ order.book.id }} </li>
             <li>预约日期: {{ order.orderDate|date:"Y-m-d" }}</li>
         <hr/>
